# ABB

./: .gitignore  Approach note.docx  README.md  pyproject.toml  solution.ipynb  ~$proach note.docx
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
catboost_info/tmp/: cat_feature_index.7bc126df-3cc0994f-fe3b1467-61f8e550.tmp  cat_feature_index.eeb9d52f-4f8625e6-51849d2f-fcf99bd0.tmp
data/: submission1.csv  submission2.csv  submission3.csv
